kubernetes/gitops/base/apps/magento/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: magento
  namespace: apps
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: magento
  template:
    metadata:
      labels:
        app.kubernetes.io/name: magento
    spec:
      imagePullSecrets:
        - name: ghcr-credentials
      containers:
        - name: magento
          image: ghcr.io/yosefadi/minikube-magento/magento:2.4.9-88957dd
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              memory: 512Mi
          volumeMounts:
            - name: app-etc
              mountPath: /var/www/html/app/etc
            - name: pub-static
              mountPath: /var/www/html/pub/static
            - name: pub-media
              mountPath: /var/www/html/pub/media
      volumes:
        - name: app-etc
          persistentVolumeClaim:
            claimName: magento-etc
        - name: pub-static
          persistentVolumeClaim:
            claimName: magento-static
        - name: pub-media
          persistentVolumeClaim:
            claimName: magento-media
