kubernetes/gitops/base/apps/magento/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: magento
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: magento
  ports:
    - port: 8080
      targetPort: 8080
      name: http
